# flux

./: Cargo.toml
crates/harness/: Cargo.toml
crates/harness/src/: harness.rs  lib.rs  snapshot.rs
src/: helper.rs  lib.rs  main.rs  snapshot.rs  stand.rs
src/core/: debug.rs  mod.rs  physics.rs
src/fluid/: mod.rs
src/harness/: fluids.rs  harness.rs  mod.rs
src/harness/physics/: mod.rs
src/stand/: flow.rs  mod.rs  tick.rs
