[package]
name = "flux"
version = "0.0.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16" }

salva3d = { version = "0.9", features = ["parallel", "rapier"] }
rapier3d = { package = "bevy_rapier3d", version = "0.30", features = ["parallel", "simd-stable"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
type_complexity = "allow"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
nonstandard_macro_braces = "warn"
redundant_closure_for_method_calls = "warn"
print_stdout = "warn"
print_stderr = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"