[package]
name = "flux"
version = "0.0.0"
edition = "2024"

[dependencies.salva]
package = "salva3d"
path = "../salva/build/salva3d"
features = ["sampling"]

[dependencies.rapier]
package = "rapier3d"
version = "0.23"
features = ["debug-render", "serde-serialize"]

[dependencies]
# bevy
bevy = { version = "0.16", features = ["serialize"] }
panorbit_camera = { package = "bevy_panorbit_camera", version = "0.26" }

# physics
nalgebra = { version = "0.33", features = ["rand", "glam029"] }

instant = { version = "0.1" }
crossbeam = { version = "0.8", default-features = false, features = ["std", "crossbeam-channel"] }
num_cpus = { version = "1.17", optional = true }

[features]
default = ["parallel"]
simd = ["rapier/simd-stable"]
parallel = ["num_cpus", "salva/parallel", "rapier/parallel"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
type_complexity = "allow"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
nonstandard_macro_braces = "warn"
redundant_closure_for_method_calls = "warn"
print_stdout = "warn"
print_stderr = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"