[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[dependencies.salva]
package = "salva3d"
git = "https://github.com/dimforge/salva"
features = ["sampling", "rapier-harness"]

[dependencies.rapier]
package = "rapier3d"
version = "0.23"
features = ["simd-stable", "debug-render", "serde-serialize"]

[dependencies]
serde = { version = "1", features = ["derive"] }
crossbeam = "0.8"
bincode = "1.3"
profiling = "1.0"
num_cpus = { version = "1.17.0", optional = true }

[features]
default = []
parallel = ["num_cpus", "salva/parallel", "rapier/parallel"]
