[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[dependencies.rapier]
package = "rapier3d"
version = "0.23"
features = ["debug-render", "serde-serialize"]

[dependencies]
crossbeam = "0.8"
profiling = "1.0"
num_cpus = { version = "1.17.0", optional = true }

[features]
default = []
parallel = ["num_cpus", "rapier/parallel"]
